# scheduler

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2023-07-06-002816_users/: up.sql
migrations/2023-07-18-215239_professionals/: down.sql  up.sql
migrations/2023-07-18-215325_services/: up.sql
migrations/2023-07-18-220029_appointments/: up.sql
migrations/2023-07-18-220037_notifications/: up.sql
migrations/2023-07-18-220042_reviews/: up.sql
migrations/2023-07-18-220052_promotions/: down.sql  up.sql
migrations/2023-07-18-220058_service_history/: down.sql  up.sql
src/: database.rs  db.rs  enums.rs  main.rs  middleware.rs  models.rs  routes.rs  schema.rs  user_models.rs
src/controllers/: appointment_controller.rs  mod.rs  notification_controller.rs  professional_controller.rs  promotion_controller.rs  review_controller.rs  service_controller.rs  service_history_controller.rs  user_controller.rs
src/error_response/: error_responses.rs  mod.rs
src/models/: appointment_models.rs  mod.rs  notification_models.rs  professional_model.rs  professional_models.rs  promotion_models.rs  review_models.rs  service_history_models.rs  service_models.rs  user.rs  user_models.rs
src/routes/: middleware.rs
src/routes/routes/: appointment.rs  authorization.rs  mod.rs  notification.rs  professional.rs  promotion.rs  review.rs  service.rs  service_history.rs
src/schemas/: user.rs
src/utils/: file_utils.rs
