[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust"
path = "src/main.rs"

[package.metadata]
default-run = "rust"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_codegen = "0.5.0-rc.3"
rocket_contrib = "0.4.10"
diesel = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
rand = "0.7"
rust-argon2 = "0.5"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
custom_derive ="0.1.7"
jsonwebtoken = "8.3.0"