[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust"
path = "src/main.rs"

[package.metadata]
default-run = "rust"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket-multipart-form-data = "0.10.5"
rocket_codegen = "0.5.0-rc.3"
rocket_contrib = "0.4.10"
diesel = { version = "2.1.0", features = ["postgres", "numeric", "chrono"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
rand = "0.7"
rust-argon2 = "0.5"
serde = {version = "1.0.173", features = ["derive"]}
serde_derive = "1.0.103"
serde_json = "1.0.103"
chrono = { version = "0.4", features = ["serde"] }
custom_derive ="0.1.7"
jsonwebtoken = "8.3.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.0"